# syncrim-hal

./: Cargo.toml
src/: lib.rs
src/gpio/: mod.rs
src/mtime/: mod.rs
