[package]
name = "syncrim-hal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0"
#syncrim-pac = {path = "../syncrim-pac/"}
syncrim-pac = {git="https://github.com/onsdagens/syncrim-pac", branch = "gen"}
